--- a/resources/styles/Helpers/fonts.less
+++ b/resources/styles/Helpers/fonts.less
@@ -1,9 +1,23 @@
-//@font-face {
-//	font-family: "Open Sans";
-//	src: url("../fonts/openSans/opensans-light.eot?") format('embedded-opentype'),
-//	url("../fonts/openSans/opensans-light.ttf") format('truetype'),
-//	url("../fonts/openSans/opensans-light.otf") format('opentype'),
-//	url("../fonts/openSans/opensans-light.woff") format('woff');
-//
-//	font-weight: 300;
-//}
+@font-face {
+	font-family: "stolzl";
+	src:
+        //url("../fonts/stolzl/stolzl-book.eot?") format('embedded-opentype'),
+        //url("../fonts/stolzl/stolzl-book.ttf") format('truetype'),
+        url("../fonts/stolzl/stolzl-book.otf") format('opentype');
+        //url("../fonts/stolzl/stolzl-book.otf") format('opentype'),
+        //url("../fonts/stolzl/stolzl-book.woff") format('woff');
+
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "stolzl";
+	src:
+        //url("../fonts/stolzl/stolzl-bold.eot?") format('embedded-opentype'),
+        //url("../fonts/stolzl/stolzl-bold.ttf") format('truetype'),
+        url("../fonts/stolzl/stolzl-bold.otf") format('opentype');
+        //url("../fonts/stolzl/stolzl-bold.otf") format('opentype'),
+        //url("../fonts/stolzl/stolzl-bold.woff") format('woff');
+
+	font-weight: 700;
+}
