--- a/resources/styles/variables.less
+++ b/resources/styles/variables.less
@@ -8,7 +8,7 @@
 @mobileLg:~"only screen and (max-width: 768px)";
 @tablet:~"only screen and (max-width: 992px)";
 @laptop:~"only screen and (max-width: 1120px)";
-@laptopMd:~"only screen and (max-width: 1250px)";
+@laptopMd:~"only screen and (max-width: 1200px)";
 @laptopLg:~"only screen and (max-width: 1360px)";
 
 @h850: ~"only screen and (max-height: 850px)";
@@ -21,3 +21,12 @@
 /**
  * Main colors
  */
+//@color_green: #01ff83;
+//#4caf50;
+//#2a7c32
+//#2e7d32
+@color_blue: #2e6aff;
+@color_yellow: #fff031;
+@color_gray: #37474f;
+@color_gray_light: #8a8a8a;
+@color_black: #000;
