--- a/resources/styles/Helpers/helpers.less
+++ b/resources/styles/Helpers/helpers.less
@@ -12,7 +12,7 @@
 }
 
 .m{
-  @marginList: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, -5, -10, -15, -20, -25, -30, -35, -40, -45, -50;
+  @marginList: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 70, 80, -5, -10, -15, -20, -25, -30, -35, -40, -45, -50;
   .help-size(@marginList, margin);
 }
 
@@ -66,6 +66,20 @@
     height: 100%;
     width: 100% !important;
     max-width: 100%!important;
+  }
+}
+
+.user-select-none {
+  user-select: none;
+  position: relative;
+
+  &::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
 
