--- a/resources/styles/Ui/typography.less
+++ b/resources/styles/Ui/typography.less
@@ -2,65 +2,49 @@ h1, .h1{
   margin-top: 100px;
   position: relative;
   .font-size(110);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-
-  color: green;
-  //&::before {
-  //  content: '';
-  //  position: absolute;
-  //  .font-size(90);
-  //  top: -9px;
-  //  left: -37px;
-  //  color: #fff;
-  //  text-shadow: 0px 0px 2px #176f63;
-  //  z-index: -1;
-  //}
-  //
-  //&::after {
-  //  content: '';
-  //  position: absolute;
-  //  bottom: 0;
-  //  left: -43px;
-  //  width: 65px;
-  //  height: 8px;
-  //  background-color: #000;
-  //}
+  font-family: 'stolzl', sans-serif;
+  font-weight: 700;
 }
+
 h2, .h2{
-  .font-size(85);
+  .font-size(137);
   line-height: 1;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
+  font-family: 'stolzl', sans-serif;
+  font-weight: 700;
+  color: @color_blue;
 }
 h3, .h3{
-  .font-size(60);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
+  font-size: 57px;
+  letter-spacing: 3px;
+  .font-size(57);
+  font-family: 'stolzl', sans-serif;
+  font-weight: 700;
+  color: @color_yellow;
 }
 h4, .h4{
-  .font-size(18);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
+  .font-size(22);
+  font-family: 'stolzl', sans-serif;
+  color: @color_gray_light;
+  font-weight: 700;
 }
 
 h5, .h5{
   .font-size(14);
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'stolzl', sans-serif;
   font-weight: 900;
 }
 
 p, .p{
-  .font-size(12);
+  .font-size(14);
   font-weight: 700;
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'stolzl', sans-serif;
 }
 
 .ul {
   margin: 0;
   padding: 20px 0 10px;
-  font-family: 'Roboto Mono', monospace;
-  color: #177565;
+  font-family: 'stolzl', sans-serif;
+  color: @color_blue;
   list-style-type: none;
 
   li {
@@ -95,60 +79,104 @@ p, .p{
 
 .sub-title{
   .font-size(14);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
+  font-family: 'stolzl', sans-serif;
+  font-weight: 700;
 }
 .notation{
   .line-height(12, 14);
-  font-weight: 900;
-  font-family: 'Montserrat', sans-serif;
-  color: #7F7F7F;
+  font-weight: 700;
+  font-family: 'stolzl', sans-serif;
+  color: @color_gray_light;
 }
 
 .text-bold {
   font-weight: 700;
 }
 
-.link {
-  font-family: 'Roboto Mono', monospace;
-  font-weight: bold;
-  .font-size(11);
-  letter-spacing: 0.02em;
-  color: #1F9988;
+.text-grey {
+  color: @color_gray_light;
 }
+
+.link {
+  font-family: 'stolzl', sans-serif;
+  letter-spacing: 0.02em;
+  color: @color_blue;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 h1, .h1, h2, .h2, h3, .h3,
 h4, .h4, h5, .h5, p, .ul, .ul li,
 .sub-title, .notation, .link {
   transition: .2s;
 }
 
-@media screen and (min-width: 1480px) and (min-height: 650px){
-  h1, .h1{
-    .font-size(150);
-
-    &::before {
-      top: -20px;
-      .font-size(130);
-    }
-  }
+@media screen and (max-width: 1400px) {
   h2, .h2{
     .font-size(110);
   }
-  h5, .h5{
+  h3, .h3 {
+    .font-size(42);
+  }
+  h4, .h4 {
+    .font-size(18);
+  }
+}
+@media @laptopMd {
+  h2, .h2{
+    .font-size(100);
+  }
+  h3, .h3 {
+    .font-size(35);
+  }
+  h4, .h4 {
     .font-size(16);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
   }
-  p, .p {
-      .font-size(14);
-  }
-  .ul {
-    li {
-      .font-size(14);
-    }
-  }
+}
 
-  .notation {
-    font-size:12px!important;
+@media @laptop {
+  h2, .h2{
+    .font-size(90);
+  }
+  h3, .h3 {
+    .font-size(32);
+  }
+  h4, .h4 {
+    .font-size(15);
+  }
+}
+@media @tablet {
+  h2, .h2{
+    .font-size(80);
+  }
+  h3, .h3 {
+    .font-size(30);
+  }
+}
+
+@media @mobileLg {
+  h2, .h2{
+    .font-size(70);
+  }
+  h3, .h3 {
+    .font-size(28);
+  }
+  h4, .h4 {
+    .font-size(14);
+  }
+}
+
+@media @mobileLg {
+  h2, .h2{
+    .font-size(50);
+  }
+  h3, .h3 {
+    .font-size(20);
+  }
+  h4, .h4 {
+    .font-size(14);
   }
 }
