--- a/resources/styles/main.less
+++ b/resources/styles/main.less
@@ -23,7 +23,7 @@ html, body {
   width: 100%;
   height: 100%;
 
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'stolzl', sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #000;
@@ -47,6 +47,7 @@ html, body {
   position: relative;
   overflow: hidden;
   transition: .2s;
+  padding: 0;
 
   &.wrapper-blured {
     filter: blur(9px);
@@ -60,15 +61,21 @@ html, body {
 }
 
 .container {
-  display: flex;
-  height: 100vh;
-}
-.panel {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  max-width: 1750px;
   width: 100%;
-  padding: 35px;
-  padding-top: 100px;
+  margin: 0 auto;
+  padding: 0 85px;
 }
+
+section {
+  //min-height: ~'calc(100vh - 115px)';
+  //min-height: ~'calc(100vh - 15px)';
+  padding: 80px 0 0;
+
+}
+@media screen and (max-width: 1400px) {
+  .container {
+    padding: 0 15px;
+  }
+}
+
