--- a/resources/styles/Helpers/fonts.less
+++ b/resources/styles/Helpers/fonts.less
@@ -1,23 +1,10 @@
 @font-face {
-	font-family: "stolzl";
+	font-family: "warface";
 	src:
-        //url("../fonts/stolzl/stolzl-book.eot?") format('embedded-opentype'),
-        //url("../fonts/stolzl/stolzl-book.ttf") format('truetype'),
-        url("../fonts/stolzl/stolzl-book.otf") format('opentype');
-        //url("../fonts/stolzl/stolzl-book.otf") format('opentype'),
-        //url("../fonts/stolzl/stolzl-book.woff") format('woff');
-
+        //url("../fonts/warface.eot?") format('embedded-opentype'),
+        url("../fonts/warface.ttf") format('truetype');
+        //url("../fonts/warface.otf") format('opentype');
+        //url("../fonts/warface.otf") format('opentype'),
+        //url("../fonts/warface.woff") format('woff');
 	font-weight: 400;
-}
-
-@font-face {
-	font-family: "stolzl";
-	src:
-        //url("../fonts/stolzl/stolzl-bold.eot?") format('embedded-opentype'),
-        //url("../fonts/stolzl/stolzl-bold.ttf") format('truetype'),
-        url("../fonts/stolzl/stolzl-bold.otf") format('opentype');
-        //url("../fonts/stolzl/stolzl-bold.otf") format('opentype'),
-        //url("../fonts/stolzl/stolzl-bold.woff") format('woff');
-
-	font-weight: 700;
 }
