--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -1,13 +1,13 @@
 .speakers {
-  min-height: 100vh;
+  //min-height: 100vh;
   height: auto;
 }
 
 .speakers-bg-img {
   display: block;
-  width: 100%;
-  max-width: 450px;
-  height: 155px;
+  //width: 100%;
+  //max-width: 450px;
+  height: 350px;
   margin-top: 100px;
   user-select: none;
 }
@@ -44,7 +44,7 @@
   margin-top: 15px;
   color: @color_blue;
   .font-size(26);
-  font-weight: 700;
+  font-weight: 400;
 }
 
 .speaker-position {
@@ -58,7 +58,7 @@
   margin-top: 15px;
   color: @color_gray_light;
   .font-size(16);
-  font-weight: 700;
+  font-weight: 400;
 }
 
 // modal
@@ -100,7 +100,7 @@
   }
   .speaker-report {
     .font-size(18);
-    font-weight: 700;
+    font-weight: 400;
     margin-bottom: 15px;
   }
 }
