--- a/resources/styles/variables.less
+++ b/resources/styles/variables.less
@@ -25,7 +25,7 @@
 //#4caf50;
 //#2a7c32
 //#2e7d32
-@color_blue: #2e6aff;
+@color_blue: #2f6aff;
 @color_yellow: #fff031;
 @color_gray: #37474f;
 @color_gray_light: #8a8a8a;
