--- a/resources/styles/Components/header.less
+++ b/resources/styles/Components/header.less
@@ -47,7 +47,7 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  font-family: 'stolzl', sans-serif;
+  font-family: 'warface', sans-serif;
 
   li {
 
@@ -56,7 +56,7 @@
       display: inline-block;
       padding: 7px 10px;
       margin-right: 20px;
-      font-weight: 700;
+      font-weight: 400;
       .font-size(14);
       color: @color_blue;
       text-decoration: none;
