--- a/resources/styles/Helpers/helpers.less
+++ b/resources/styles/Helpers/helpers.less
@@ -17,7 +17,7 @@
 }
 
 .p{
-  @marginList: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50;
+  @marginList: 0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 80;
   .help-size(@marginList, padding);
 }
 
@@ -32,10 +32,6 @@
 }
 .text-justify {
   text-align: justify;
-}
-
-.text-bold {
-  font-weight: 600;
 }
 
 .uppercase {
