--- a/resources/styles/Screens/about.less
+++ b/resources/styles/Screens/about.less
@@ -12,7 +12,7 @@
 .about-bg-img{
   display: block;
   width: 100%;
-  max-width: 450px;
+  //max-width: 450px;
   margin-top: 100px;
   user-select: none;
 }
