--- a/resources/styles/Ui/typography.less
+++ b/resources/styles/Ui/typography.less
@@ -2,54 +2,54 @@ h1, .h1{
   margin-top: 100px;
   position: relative;
   .font-size(110);
-  font-family: 'stolzl', sans-serif;
-  font-weight: 700;
+  font-family: 'warface', sans-serif;
+  font-weight: 400;
 }
 
 h2, .h2{
   .font-size(137);
   line-height: 1;
-  font-family: 'stolzl', sans-serif;
-  font-weight: 700;
+  font-family: 'warface', sans-serif;
+  font-weight: 400;
   color: @color_blue;
 }
 h3, .h3{
   font-size: 57px;
   letter-spacing: 3px;
   .font-size(57);
-  font-family: 'stolzl', sans-serif;
-  font-weight: 700;
+  font-family: 'warface', sans-serif;
+  font-weight: 400;
   color: @color_yellow;
 }
 h4, .h4{
   .font-size(22);
-  font-family: 'stolzl', sans-serif;
+  font-family: 'warface', sans-serif;
   color: @color_gray_light;
-  font-weight: 700;
+  font-weight: 400;
 }
 
 h5, .h5{
   .font-size(14);
-  font-family: 'stolzl', sans-serif;
-  font-weight: 900;
+  font-family: 'warface', sans-serif;
+  font-weight: 400;
 }
 
 p, .p{
   .font-size(14);
-  font-weight: 700;
-  font-family: 'stolzl', sans-serif;
+  font-weight: 400;
+  font-family: 'warface', sans-serif;
 }
 
 .ul {
   margin: 0;
   padding: 20px 0 10px;
-  font-family: 'stolzl', sans-serif;
+  font-family: 'warface', sans-serif;
   color: @color_blue;
   list-style-type: none;
 
   li {
     position: relative;
-    font-weight: bold;
+    font-weight: 400;
     padding-left: 50px;
     margin-bottom: 25px;
     .font-size(12);
@@ -79,13 +79,13 @@ p, .p{
 
 .sub-title{
   .font-size(14);
-  font-family: 'stolzl', sans-serif;
-  font-weight: 700;
+  font-family: 'warface', sans-serif;
+  font-weight: 400;
 }
 .notation{
   .line-height(12, 14);
-  font-weight: 700;
-  font-family: 'stolzl', sans-serif;
+  font-weight: 400;
+  font-family: 'warface', sans-serif;
   color: @color_gray_light;
 }
 
@@ -98,7 +98,7 @@ p, .p{
 }
 
 .link {
-  font-family: 'stolzl', sans-serif;
+  font-family: 'warface', sans-serif;
   letter-spacing: 0.02em;
   color: @color_blue;
   text-decoration: none;
