--- a/resources/styles/main.less
+++ b/resources/styles/main.less
@@ -23,7 +23,7 @@ html, body {
   width: 100%;
   height: 100%;
 
-  font-family: 'stolzl', sans-serif;
+  font-family: 'warface', sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #000;
