--- a/resources/styles/Helpers/fonts.less
+++ b/resources/styles/Helpers/fonts.less
@@ -8,3 +8,14 @@
         //url("../fonts/warface.woff") format('woff');
 	font-weight: 400;
 }
+
+@font-face {
+	font-family: "brutal";
+	src:
+        //url("../fonts/warface.eot?") format('embedded-opentype'),
+        url("../fonts/brutal.ttf") format('truetype');
+        //url("../fonts/warface.otf") format('opentype');
+        //url("../fonts/warface.otf") format('opentype'),
+        //url("../fonts/warface.woff") format('woff');
+	font-weight: 400;
+}
