--- a/resources/styles/Components/header.less
+++ b/resources/styles/Components/header.less
@@ -196,7 +196,7 @@
       position: absolute;
       width: 100%;
       height: 3px;
-      background-color: #fff;
+      background-color: @color_blue;
       top: 0;
       transition: .2s;
     }
