--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -7,14 +7,15 @@
   display: block;
   //width: 100%;
   //max-width: 450px;
-  height: 350px;
-  margin-top: 100px;
+  height: 300px;
+  margin-top: -200px;
   user-select: none;
 }
 
 .speakers-list {
   margin-top: 80px;
   flex-wrap: wrap;
+  margin-left: 350px;
 
 }
 
@@ -49,8 +50,8 @@
 
 .speaker-position {
   margin-top: 15px;
-  color: @color_gray_light;
-  .font-size(15);
+  color: #333;
+  .font-size(20);
   font-weight: 400;
 }
 
@@ -102,6 +103,18 @@
     .font-size(18);
     font-weight: 400;
     margin-bottom: 15px;
+  }
+}
+
+@media @laptopMd {
+
+  .speakers-bg-img {
+    margin-top: 20px;
+  }
+
+  .speakers-list {
+    margin-left: 0;
+
   }
 }
 
