--- a/resources/styles/Screens/heading.less
+++ b/resources/styles/Screens/heading.less
@@ -116,18 +116,29 @@
     min-height: 700px;
   }
   .heading-logo {
-    max-width: 500px;
+    max-width: 330px;
+  }
+  .heading-sun {
+    max-width: 190px;
   }
   .heading-date {
     .font-size(30);
   }
 
+  .heading-title-row {
+    margin-top: 0!important;
+  }
+
+
   .heading-list {
-    margin-top: 10vh;
+    margin-top: 5vh;
     li {
       margin-bottom: 20px;
     }
 
+  }
+  .heading-bg-img, .heading-bg-img-m {
+    margin-top: -48vh;
   }
 }
 
