--- a/resources/styles/Screens/about.less
+++ b/resources/styles/Screens/about.less
@@ -109,9 +109,12 @@
 }
 
 @media @mobileLg {
+  .about {
+    padding-bottom: 0!important;
+  }
   .about-bg-img {
     margin: 0 auto;
-    padding: 0 20px;
+    width: 120%;
   }
   .about-tickets-list {
     display: block;
