--- a/resources/styles/Screens/heading.less
+++ b/resources/styles/Screens/heading.less
@@ -190,6 +190,7 @@
 @media @mobileLg {
   .heading{
     min-height: 610px;
+    padding-bottom: 0!important;
 
     .container {
       display: block;
