--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -156,8 +156,9 @@
   }
 
   .speakers-bg-img {
-    margin: 0 auto;
-    padding: 0 20px;
+    margin: 0;
+    height: 190px;
+    padding: 0;
   }
 
   .speakers-modal_content {
