--- a/resources/styles/Screens/sponsors.less
+++ b/resources/styles/Screens/sponsors.less
@@ -33,4 +33,12 @@
       .font-size(16);
     }
   }
+
+  .sponsors-bg-img {
+    margin-bottom: 40px;
+  }
+
+  .sponsors-text {
+    margin-top: 40px!important;
+  }
 }
