--- a/resources/styles/Helpers/helpers.less
+++ b/resources/styles/Helpers/helpers.less
@@ -79,6 +79,9 @@
   }
 }
 
+.white-space-nw {
+  white-space: nowrap;
+}
 
 @keyframes frame-load-anim{
   0%   {background-color: rgba(0, 145, 155, 0.2);}
