--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -120,6 +120,10 @@
 
 
 @media @mobileLg {
+  .speakers-list {
+    margin-top: 20px;
+  }
+
   .speakers-modal_txt {
     .speaker-name {
       .font-size(18)
