--- a/resources/styles/Screens/history.less
+++ b/resources/styles/Screens/history.less
@@ -47,6 +47,10 @@
       margin: 0 auto;
       max-width: 480px;
       margin-bottom: 40px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
   }
