--- a/resources/styles/Screens/heading.less
+++ b/resources/styles/Screens/heading.less
@@ -75,7 +75,7 @@
     &::after {
       content: '';
       position: absolute;
-      top: -7px;;
+      top: -7px;
       //top: 50%;
       //transform: translateY(-50%);
       left: -55px;
