--- a/resources/styles/Components/header.less
+++ b/resources/styles/Components/header.less
@@ -41,6 +41,7 @@
   margin-left: 45px;
 }
 
+.lang,
 .menu {
   display: flex;
   justify-content: space-between;
@@ -50,6 +51,10 @@
   font-family: 'warface', sans-serif;
 
   li {
+
+    &.lang-mobile {
+      display: none!important;
+    }
 
     a{
       position: relative;
@@ -94,23 +99,20 @@
   }
 }
 
-.header-contact {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 26px;
-  height: 26px;
-  margin-left: 35px;
-  border-radius: 50%;
-  background-color: #1F9988;
-  transition: .1s;
+.lang {
+  li{
+    color: @color_blue;
+  }
+  a{
+    color: @color_blue;
 
-  &:hover,
-  &:active,
-  &:focus {
-    transform: scale(1.1);
+    &:first-child {
+      margin-right: 0;
+      margin-left: 15px;
+    }
   }
 }
+
 .brgr-menu {
   display: none;
 }
@@ -132,7 +134,8 @@
   .nav {
     margin-left: 0;
   }
-  .menu {
+  .menu,
+  .header ul:not(.lang) {
     display: none;
     position: fixed;
     background-color: #fff;
@@ -176,8 +179,12 @@
     }
   }
 
-  .header-contact{
-    order: 0;
+  .lang {
+    a {
+      &:last-child {
+        margin-right: 5px;
+      }
+    }
   }
 
   .brgr-menu {
@@ -269,6 +276,36 @@
   .logo {
     img {
       height: 36px;
+    }
+  }
+}
+
+
+@media @mobileSm {
+
+  .lang {
+    display: none;
+  }
+
+  .menu {
+    li {
+
+      &.lang-mobile {
+        display: flex!important;
+        align-items: center!important;
+
+        a{
+          max-width: none!important;
+          width: auto!important;
+          margin-right: 20px;
+
+          &:last-child {
+            margin-left: 20px!important;
+            margin-right: 0;
+
+          }
+        }
+      }
     }
   }
 }
