--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -50,16 +50,16 @@
 
 .speaker-position {
   margin-top: 15px;
-  color: #333;
-  .font-size(20);
+  color: @color_gray_light;
+  .font-size(16);
   font-weight: 400;
 }
 
 .speaker-report {
   margin-top: 15px;
-  color: @color_gray_light;
-  .font-size(16);
+  .font-size(20);
   font-weight: 400;
+  color: #333;
 }
 
 // modal
@@ -103,6 +103,7 @@
     .font-size(18);
     font-weight: 400;
     margin-bottom: 15px;
+    color: @color_gray;
   }
 }
 
