--- a/resources/styles/Screens/about.less
+++ b/resources/styles/Screens/about.less
@@ -39,6 +39,7 @@
 .about-tickets-list {
   display: flex;
   justify-content: space-between;
+  justify-content: space-around;
   margin-top: 14vh;
   list-style: none;
   padding: 0;
