--- a/resources/styles/Screens/about.less
+++ b/resources/styles/Screens/about.less
@@ -20,7 +20,7 @@
 .about-tickets-txt {
   margin-right: 3%;
   .h4 {
-    margin-top: 5vh;
+    margin-top: 8vh;
     max-width: 550px;
     text-align: center;
     background-color: #fff;
@@ -38,9 +38,9 @@
 
 .about-tickets-list {
   display: flex;
-  justify-content: space-between;
+  //justify-content: space-between;
   justify-content: space-around;
-  margin-top: 14vh;
+  margin-top: 6vh;
   list-style: none;
   padding: 0;
 }
@@ -71,7 +71,7 @@
   width: 100%;
   height: 100px;
   padding: 20px 20px 20px 30px;
-  .font-size(25);
+  .font-size(20);
   font-weight: 400;
   color: @color_gray_light;
   border-radius: 8px;
@@ -132,6 +132,6 @@
   .about-ticket-title {
     height: 120px;
     padding: 20px 20px 20px 40px;
-    .font-size(24)
+    .font-size(20);
   }
 }
