--- a/resources/styles/Components/footer.less
+++ b/resources/styles/Components/footer.less
@@ -3,7 +3,7 @@
   left: 38px;
   bottom: 15px;
   padding: 10px;
-  background-color: #fff;
+  //background-color: #fff;
 }
 @media screen and (max-height: 630px) {
   .copyright {
