--- a/resources/styles/Screens/about.less
+++ b/resources/styles/Screens/about.less
@@ -1,5 +1,5 @@
 .about {
-  background-color: #fff;
+  //background-color: #fff;
   //background-image: url("../img/about_bg.svg");
   //background-position: bottom left;
   //background-repeat: no-repeat;
