--- a/resources/styles/Screens/heading.less
+++ b/resources/styles/Screens/heading.less
@@ -1,5 +1,5 @@
 .heading {
-  background-color: #fff;
+  //background-color: #fff;
   //background-image: url("../img/heading_bg.png");
   //background-position: bottom center;
   //background-repeat: no-repeat;
@@ -118,10 +118,10 @@
     min-height: 700px;
   }
   .heading-logo {
-    max-width: 330px;
+    max-width: 300px;
   }
   .heading-sun {
-    max-width: 190px;
+    max-width: 170px;
   }
   .heading-date {
     .font-size(30);
@@ -131,7 +131,6 @@
     margin-top: 0!important;
   }
 
-
   .heading-list {
     margin-top: 5vh;
     li {
@@ -140,7 +139,7 @@
 
   }
   .heading-bg-img {
-    margin-top: -48vh;
+    margin-top: -50vh;
   }
 }
 
