--- a/resources/styles/Components/header.less
+++ b/resources/styles/Components/header.less
@@ -56,11 +56,15 @@
       display: none!important;
     }
 
+    &.socials-block-mobile {
+      display: none !important;
+    }
+
     a{
       position: relative;
       display: inline-block;
       padding: 7px 10px;
-      margin-right: 20px;
+      margin-right: 10px;
       font-weight: 400;
       .font-size(14);
       color: @color_blue;
@@ -252,6 +256,10 @@
   .header-transp {
     min-width: 235px;
   }
+  .header-socials-block {
+    margin-right: 15px;
+  }
+
 }
 @media @mobileLg {
   .header-transp {
@@ -270,6 +278,24 @@
       top: 79px;
       height: ~'calc(100vh - 79px)';
     }
+  }
+
+  .menu {
+    li {
+      &.socials-block-mobile {
+        display: flex !important;
+        align-items: center !important;
+
+        .socials-block {
+          margin-left: -8px;
+        }
+      }
+    }
+  }
+
+
+  .header-socials-block {
+    display: none;
   }
 
 
