--- a/resources/styles/Helpers/fonts.less
+++ b/resources/styles/Helpers/fonts.less
@@ -6,6 +6,7 @@
         //url("../fonts/warface.otf") format('opentype');
         //url("../fonts/warface.otf") format('opentype'),
         //url("../fonts/warface.woff") format('woff');
+	font-display: fallback;
 	font-weight: 400;
 }
 
@@ -17,5 +18,6 @@
         //url("../fonts/warface.otf") format('opentype');
         //url("../fonts/warface.otf") format('opentype'),
         //url("../fonts/warface.woff") format('woff');
+	font-display: fallback;
 	font-weight: 400;
 }
