--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -38,6 +38,7 @@
     display: inline-block;
     width: 100%;
     margin: 0 auto;
+    filter: grayscale(1);
   }
 }
 
@@ -71,6 +72,7 @@
     display: block;
     margin: 0 auto;
     width: 100%;
+    filter: grayscale(1);
   }
 }
 
