--- a/resources/styles/Screens/schedule.less
+++ b/resources/styles/Screens/schedule.less
@@ -4,22 +4,74 @@
   margin-top: 100px;
 }
 .schedule-list {
-  margin-top: 100px;
+  max-width: 1100px;
+  margin: 100px auto 0;
 }
+.schedule-head {
+  display: flex;
+  width: 100%;
+  padding: 15px 0;
+}
+
+.schedule-head-item {
+  color: lighten(@color_blue, 15%);
+  text-align: center;
+  width: 50%;
+  width: 100%;
+  font-weight: 700;
+  .font-size(22);
+
+  &:first-child {
+    width: 140px;
+    margin-right: 4%;
+  }
+}
+
 .schedule-item {
   display: flex;
   margin-bottom: 15px;
+  padding: 12px;
+  align-items: center;
+
+  &:nth-child(2n+1) {
+    background-color: lighten(@color_yellow, 35%);
+  }
 }
 .schedule-time {
+  max-width: 100px;
+  width: 100px;
   white-space: nowrap;
-  color: @color_gray_light;
-  .font-size(30);
-  margin-right: 5%;
+  color: @color_black;
+  .font-size(18);
+  margin-right: 2%;
+}
+.schedule-icon {
+  width: 40px;
+  min-width: 40px;
+  height: 40px;
+  min-height: 40px;
+  background-image: url("../img/i2.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  margin-right: 2%;
 }
 .schedule-text {
-  color: @color_gray;
-  .font-size(30);
-  font-weight: 400;
+  color: @color_blue;
+  .font-size(18);
+  font-weight: bold;
+  margin-right: 2%;
+  margin-top: 10px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.schedule-author{
+  margin-top: 10px;
+  color: @color_black;
+  .font-size(16);
 }
 
 @media @tablet {
@@ -36,5 +88,15 @@
   }
   .schedule-text {
     .font-size(16);
+  }
+}
+
+@media @mobileMd {
+  .schedule-list-container {
+    width: 100%;
+    overflow-x: auto;
+  }
+  .schedule-list {
+    min-width: 540px;
   }
 }
