--- a/resources/styles/Screens/schedule.less
+++ b/resources/styles/Screens/schedule.less
@@ -4,7 +4,7 @@
   margin-top: 100px;
 }
 .schedule-list {
-  max-width: 1100px;
+  max-width: 800px;
   margin: 100px auto 0;
 }
 .schedule-head {
@@ -50,11 +50,30 @@
   min-width: 40px;
   height: 40px;
   min-height: 40px;
-  background-image: url("../img/i2.svg");
+  background-image: url("../img/sheet.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   margin-right: 2%;
+
+  &.profile{
+    background-image: url("../img/profile.svg");
+  }
+  &.people{
+    background-image: url("../img/people.svg");
+  }
+  &.clock{
+    background-image: url("../img/clock.svg");
+  }
+  &.sheet{
+    background-image: url("../img/sheet.svg");
+  }
+  &.cup{
+    background-image: url("../img/cup.svg");
+  }
+  &.plate{
+    background-image: url("../img/plate.svg");
+  }
 }
 .schedule-text {
   color: @color_blue;
