media partners block added

--- a/resources/styles/Screens/sponsors.less
+++ b/resources/styles/Screens/sponsors.less
@@ -18,6 +18,33 @@
   }
 }
 
+.sponsors-media-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.sponsors-media-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  flex: 0 0 17%;
+  max-width: 17%;
+  text-align: center;
+  //max-width: 200px;
+
+  img {
+    display: inline-block;
+    margin: 0 auto;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 180px;
+    vertical-align: middle;
+
+  }
+}
+
 @media @laptopLg {
 
   .sponsors-text {
@@ -41,5 +68,11 @@
 
   .sponsors-text {
     margin-top: 40px!important;
+  }
+
+
+  .sponsors-media-item{
+    flex: 0 0 50%;
+    max-width: 50%;
   }
 }
