--- a/resources/styles/Screens/heading.less
+++ b/resources/styles/Screens/heading.less
@@ -113,6 +113,10 @@
   }
 }
 
+.heading-tickets-btn {
+  display: none;
+}
+
 @media screen and (max-width: 1400px) {
   .heading {
     min-height: 700px;
@@ -178,6 +182,12 @@
     margin-left: 0;
     margin-top: 60px;
     .font-size(30);
+  }
+
+  .heading-tickets-btn {
+    display: block;
+    width: 100%;
+    //max-width: 400px;
   }
 
 }
