--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -49,11 +49,16 @@
   font-weight: 400;
 }
 
+.speaker-place,
 .speaker-position {
   margin-top: 15px;
   color: @color_gray_light;
   .font-size(16);
   font-weight: 400;
+}
+
+.speaker-place {
+  margin-top: 5px;
 }
 
 .speaker-report {
