--- a/resources/styles/main.less
+++ b/resources/styles/main.less
@@ -74,6 +74,26 @@ section {
   padding: 80px 0 0;
 
 }
+
+.go-up-btn {
+  position: fixed;
+  display: inline-block;
+  bottom: 15px;
+  right: 15px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  box-shadow: 0 1px 10px 0 rgba(0,1,3,.6);
+  background-color: @color_blue;
+  background-image: url("../img/up-arrow.svg");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  -webkit-transition: .2s;
+  transition: .2s;
+  z-index: 2;
+}
+
 @media screen and (max-width: 1400px) {
   .container {
     padding: 0 15px;
