--- a/resources/styles/Components/footer.less
+++ b/resources/styles/Components/footer.less
@@ -5,6 +5,17 @@
   padding: 10px;
   //background-color: #fff;
 }
+
+.volunteer-header {
+  display: none;
+}
+
+@media screen and (max-width: 768px)  {
+  .volunteer-header {
+    display: block;
+  }
+}
+
 @media screen and (max-height: 630px) {
   .copyright {
     position: absolute;
