--- a/resources/styles/Components/header.less
+++ b/resources/styles/Components/header.less
@@ -122,8 +122,11 @@
 }
 
 
-@media @laptopLg {
-
+@media (max-width: 1250px) {
+  .lang li a, .menu li a {
+    .font-size(12);
+    margin-right: 0;
+  }
 }
 
 @media @laptop {
