--- a/resources/styles/Components/header.less
+++ b/resources/styles/Components/header.less
@@ -121,11 +121,14 @@
   display: none;
 }
 
-
 @media (max-width: 1250px) {
+  .logo img {
+    height: 40px;
+  }
   .lang li a, .menu li a {
     .font-size(12);
     margin-right: 0;
+    padding: 7px 5px;
   }
 }
 
