--- a/resources/styles/Screens/sponsors.less
+++ b/resources/styles/Screens/sponsors.less
@@ -37,12 +37,13 @@
   img {
     display: inline-block;
     margin: 0 auto;
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 180px;
+    //width: auto;
+    width: 100%;
+    max-width: 160px;
+    //height: auto;
+    //max-width: 100%;
+    //max-height: 180px;
     vertical-align: middle;
-
   }
 }
 
