--- a/resources/styles/Components/header.less
+++ b/resources/styles/Components/header.less
@@ -74,6 +74,7 @@
       border-bottom: 3px solid transparent;
       height: 100%;
       letter-spacing: 2px;
+      user-select: none;
 
       &.link {
         margin-right: 0;
