--- a/resources/styles/Screens/speakers.less
+++ b/resources/styles/Screens/speakers.less
@@ -3,20 +3,31 @@
   height: auto;
 }
 
+.speakers-desc {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.speakers-preparty-reg {
+  max-width: 400px;
+}
+
 .speakers-bg-img {
   display: block;
-  //width: 100%;
-  //max-width: 450px;
   height: 300px;
-  margin-top: -200px;
+  //margin-top: -200px;
+  margin-top: 0;
   user-select: none;
 }
 
 .speakers-list {
   margin-top: 80px;
   flex-wrap: wrap;
-  margin-left: 350px;
-
+  //margin-left: 350px;
+  //
+  //&.speakers-list-preparty {
+  //  margin-left: 0;
+  //}
 }
 
 .speaker-item {
@@ -108,7 +119,7 @@
   p {
     margin-bottom: 15px;
   }
-  div{
+  div {
     margin-bottom: 30px;
   }
   .speaker-report {
@@ -173,20 +184,17 @@
     }
   }
 
-
   .speakers-modal_content p,
   .speakers-modal_content div,
   .speakers-modal_content {
     .font-size(14);
   }
 
-  .speakers-modal_content{
-    .speaker-report{
+  .speakers-modal_content {
+    .speaker-report {
       .font-size(16);
     }
   }
-
-
 
   .speaker-item {
     margin: 10px;
@@ -199,7 +207,7 @@
   }
 
   .speakers-modal_content {
-    margin-bottom: 60px!important;
+    margin-bottom: 60px !important;
   }
 }
 
