--- a/resources/styles/Ui/typography.less
+++ b/resources/styles/Ui/typography.less
@@ -108,6 +108,13 @@ p, .p{
   }
 }
 
+.text-blue{
+  color: @color_blue;
+}
+.fw-400{
+  font-weight: 400;
+}
+
 h1, .h1, h2, .h2, h3, .h3,
 h4, .h4, h5, .h5, p, .ul, .ul li,
 .sub-title, .notation, .link {
