--- a/resources/styles/Helpers/grid.less
+++ b/resources/styles/Helpers/grid.less
@@ -106,6 +106,11 @@ Flex items
   .flex-greed(@greedList, flex);
 }
 
+
+.m-0a {
+  margin: 0 auto;
+}
+
 @media @mobileLg {
   // Fix for "flex-direction: column;" in IE
   // add for child nodes
