--- a/resources/styles/Screens/sponsors.less
+++ b/resources/styles/Screens/sponsors.less
@@ -56,12 +56,21 @@
   }
 }
 
+.sponsors-type{
+  .font-size(30);
+  color: @color_blue;
+}
+
 @media @laptopLg {
 
   .sponsors-text {
     p {
       .font-size(18);
     }
+  }
+
+  .sponsors-type{
+    .font-size(25);
   }
 }
 @media @mobileLg {
@@ -90,5 +99,8 @@
       flex: 0 0 70%;
       max-width: 70%;
     }
+  }
+  .sponsors-type{
+    .font-size(20);
   }
 }
