--- a/resources/styles/Screens/history.less
+++ b/resources/styles/Screens/history.less
@@ -67,7 +67,7 @@
   .font-size(18);
   text-decoration: none;
   font-weight: bold;
-  color: @color_blue;
+  color: @color_gray_light;
   transition: .2s;
 }
 
