--- a/resources/styles/Components/socials_block.less
+++ b/resources/styles/Components/socials_block.less
@@ -1,5 +1,6 @@
 .socials-block {
   text-align: center;
+  
   a {
     display: inline-block;
     width: 30px!important;
@@ -15,6 +16,9 @@
     &:hover {
       color: lighten(@color_blue, 5%);
     }
-
+//      &:last-of-type{
+//          width: auto !important;
+//          .font-size(22)!important;
+//      }
   }
 }
