head change and presentation icons added

--- a/resources/styles/Components/socials_block.less
+++ b/resources/styles/Components/socials_block.less
@@ -16,9 +16,9 @@
     &:hover {
       color: lighten(@color_blue, 5%);
     }
-//      &:last-of-type{
-//          width: auto !important;
-//          .font-size(22)!important;
-//      }
+      &:last-of-type{
+          width: auto !important;
+          .font-size(12)!important;
+      }
   }
 }
