--- a/resources/styles/Screens/heading.less
+++ b/resources/styles/Screens/heading.less
@@ -7,6 +7,72 @@
   //height: 100vh;
   //min-height: 600px;
   padding: 110px 0 0;
+    .container{
+        display: flex;
+        flex-direction: column;
+    }
+    .btn-container{
+        display: flex;
+        justify-content: center;
+        .btn{
+            margin-right: 30px;
+            &:last-child{
+                margin-right: 0;
+            }
+        }
+    }
+    .photo-container{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 40px;
+        justify-content: space-around;
+        .box{
+            text-decoration: none !important;
+            transition: all ease-out 0.3s;
+            padding: 10px 10px 30px;
+            border-radius: 6px;
+            width: 350px;
+            img{
+                width: 100%;
+            }
+            .h5{
+               color: black;
+            }
+            &:hover{
+                box-shadow: 0 2px 10px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
+                .h5{
+                    color: #2f6aff;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+    .video-container{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 40px;
+        justify-content: center;
+        .box{
+            flex: 0 0 33.333333%;
+            max-width: 33.333333%;
+            margin:  0 15px;
+            .frame-container{
+                position: relative;
+                padding-bottom: 56.25%;
+                padding-top: 30px;
+                height: 0;
+                overflow: hidden;
+                iframe{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    border: 0;
+                }
+            }
+        }
+    }
 }
 
 .heading-bg-img-m,
@@ -237,5 +303,43 @@
   .heading-list {
     margin-top: 60px;
   }
+    
+        .photo-container{
+        
+        .box{
+            width: 350px !important;
+            img{
+                
+            }
+        }
+    }
+    
+    .video-container{
+        
+        .box{
+            flex: 0 0 100% !important;
+            max-width: 100% !important;
+            margin:  0;
+            .frame-container{
+                
+            }
+        }
+    }
 
+}
+
+@media @laptopMd{
+    .heading{
+        .photo-container{
+            flex-direction: column;
+            align-items: center;
+        
+            .box{
+                width: 500px !important;
+                img{
+                
+                }
+            }
+        }
+    }
 }
